--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "firebase": "^8.6.8",
     "papaparse": "^5.3.1",
     "react": "^17.0.2",
