--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "@types/react-responsive": "^8.0.2",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
@@ -25,6 +26,7 @@
     "react-hook-form": "^7.9.0",
     "react-modal": "^3.14.3",
     "react-redux": "^7.2.0",
+    "react-responsive": "^8.2.0",
     "react-responsive-modal": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
