--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-responsive": "^8.0.2",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-test-renderer": "^17.0.1",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "firebase": "^8.6.8",
@@ -30,6 +31,7 @@
     "react-responsive-modal": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-test-renderer": "^17.0.2",
     "recharts": "^2.0.9",
     "typescript": "~4.1.5"
   },
